--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {	
 	"prefix": "multi", 
-	"defaultSessionName": "faturrbotz", 
+	"defaultSessionName": "RAKINGLAH", 
 	"zeksKey": "CpGSLymOQy9KfTKgQZr9eDSYqqR",
 	"autoRead": true,
 	"self": false, 
 	"maxLimit": 30,
-	"ownerList": ["6283813063969@s.whatsapp.net", "6281220670449@s.whatsapp.net"],
+	"ownerList": ["6289653027885@s.whatsapp.net", "6289653027885@s.whatsapp.net"],
 	"apiUrl": "https://api.zeks.me",
     "imgUrl": "https://i.postimg.cc/XNFmqpr1/76271a67a3e6162e0d0f80b1bc1d17f4.jpg",
-	"pack": "Yang Nyolong Nak Babi",
-	"author": "Fturbotz"
+	"pack": "PT BORJU BY",
+	"author": "RAKING"
 }
